Update CI/CD pipeline and web app configuration

--- a/app/index.html
+++ b/app/index.html
@@ -3,16 +3,24 @@
 <head>
     <title>Cloud Formation Success</title>
     <style>
-        body { font-family: sans-serif; text-align: center; margin-top: 50px; background-color: #180202; }
-        .card { background: rgb(234, 4, 4); padding: 20px; display: inline-block; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
-        h1 { color: #06e5b8; }
+        body { 
+            font-family: sans-serif; 
+            text-align: center; 
+            margin: 0;
+            padding-top: 100px;
+            background: linear-gradient(135deg, #1a2a6c, #2a4858); 
+            height: 100vh;
+        }
+        .card { background: rgb(165, 163, 163); padding: 20px; display: inline-block; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
+        h1 { color: #1703ef; }
     </style>
 </head>
 <body>
     <div class="card">
         <h1>Deployment Success!</h1>
         <p>This application was deployed using <b>Terraform</b>, <b>Ansible</b>, and <b>Docker</b>.</p>
-        <p>Assignment by: Rohan Sasidharan</p>
+        <hr style="border: 0.5px solid #24009b; margin: 20px 0;">
+        <p>Assignment by: <b>Rohan Sasidharan</b></p>
     </div>
 </body>
 </html>
