--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="card">
-        <h1>Deployment Success!</h1>
+        <h1>Deployment Success! V2</h1>
         <p>This application was deployed using <b>Terraform</b>, <b>Ansible</b>, and <b>Docker</b>.</p>
         <hr style="border: 0.5px solid #24009b; margin: 20px 0;">
         <p>Assignment by: <b>Rohan Sasidharan</b></p>
